# askmynotionmini

./: .env.example  .gitignore  Makefile  PROMPT_NOTES.md  README.md  pyproject.toml
app/: __init__.py  cli.py  config.py  main.py  models.py  translation.py  worker.py
app/db/: __init__.py  connection.py  schema.sql
app/ingest/: __init__.py  chunker.py  ig_pipeline.py  indexer.py  notion_ingest.py
app/providers/: MiniMax_llm.py  __init__.py  base.py  factory.py  groq_transcribe.py  local_transcribe.py  mock_embed.py  mock_llm.py  mock_notion.py  mock_transcribe.py  mock_video.py  notion_source.py  sbert_embed.py  ytdlp_video.py
app/rag/: __init__.py  answer.py  prompts.py  retrieval.py
scripts/: seed_demo.py
tests/: conftest.py  test_answer.py  test_api.py  test_chunker.py  test_retrieval.py
web/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/lib/: api.ts
web/src/pages/: Chat.tsx  Connect.tsx  Ingest.tsx  Settings.tsx  Sources.tsx
