[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "askmynotion"
version = "0.1.0"
description = "AskMyNotion — local RAG over your Notion pages and Instagram reels"
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "python-dotenv>=1.0",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "structlog>=24.1",
    "tenacity>=8.2",
    "notion-client>=2.2",
    "yt-dlp>=2024.5",
    "sentence-transformers>=2.6",
    "sqlite-vec>=0.1.1",
    "openai>=1.30",
    "groq>=0.7",
    "faster-whisper>=1.0",
    "orjson>=3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
    "types-requests",
]

[project.scripts]
askmynotion = "app.cli:main"

[tool.setuptools]
packages = ["app", "app.providers", "app.ingest", "app.rag", "app.db", "scripts"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["web/dist", "web/node_modules"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "N"]
ignore = ["E501", "B008"]

[tool.ruff.lint.per-file-ignores]
"app/providers/MiniMax_llm.py" = ["N999"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
files = ["app"]
